Fixed card spacing to footer in mobile view

--- a/src/components/Projects/styles/styles.css
+++ b/src/components/Projects/styles/styles.css
@@ -1,6 +1,5 @@
 .projects {
-  height: 100vh;
-  min-height: 100%;
+  min-height: 100vh;
   background-color: #121619;
 }
 
@@ -13,15 +12,17 @@
 
 .cards {
   max-width: 800px;
-  margin: 4rem auto;
+  margin: 0 auto;
 }
 
 .card {
   height: 300px;
-  margin: 3.5rem auto;
+  margin: 0 auto;
+  margin-top: 3.5rem;
   background-color: #187498;
   border-radius: 0.5rem;
   display: flex;
+
 }
 
 .card img {
